# EMEX

./: .gitignore  GOAL.md  README.md  pyproject.toml
docs/: CODEX_RESUME.md  COST_RESTRAINT_METRICS.md  DATA_DICTIONARY_DRAFT.md  DISCORDANCE_REVIEW_PLAN.md  ORDER_MATCHING_RULES_DRAFT.md  PI_METRICS_CHARTER.md  PROJECT_CHARTER.md  SAFETY_AND_CALIBRATION_PLAN.md  UNRESOLVED_FAULTS.md
docs/plans/: 2026-06-02-oe-companion-mode.md  2026-06-02-triage-synthesis-gap-plan.md
dotflows/: README.md  cost_restraint_review.md  discordance_review.md  ed_shadow_recommender.md  order_appropriateness_review.md  risk_resource_forecast.md
emex/: __init__.py
fixtures/oe_outputs/: chest_pain_oe_output.md
fixtures/synthetic_ed/: chest_pain_t0.json  leaky_current_results.json
src/emex/: __init__.py  cli.py  contracts.py  hashing.py  oe_output.py  oe_packet.py  redaction.py  reporting.py  trace.py  workflow.py
tests/: test_contracts.py  test_dotflows.py  test_hardening.py  test_oe_output.py  test_redaction_packet.py  test_static_web.py  test_workflow.py
web/: index.html
