[project]
name = "emex"
version = "0.1.0"
description = "Emergency Medicine Engagement Exchange synthetic-first OE DotFlow pilot"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
emex = "emex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
